Update on Get Props by ID
