# src/routes/CatPropPersonalizacion.router.ts
@@ -9,9 +9,9 @@ router.get("/", async ( _req , res ) => {
     return res.send(response)
 })
 
-router.get("/:name",async (req, res) => {
+router.get("/:id",async (req, res) => {
     const controller = new CatPropPersonalizacionController();
-    const response = await controller.getPropPersonalizacion(req.params.name);
+    const response = await controller.getPropPersonalizacion(req.params.id);
 
     if(!response) return res.status(404).send({ message: "No existe el Prop especificado"})
     return res.send(response)
